Commit du 30 janvier

--- a/src/app/accueil/accueil.page.html
+++ b/src/app/accueil/accueil.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title size="" style="color: rgb(0, 0, 0); text-align: start;">Accueil</ion-title>
+  <ion-toolbar style="--background:#24A8F2;">
+    <ion-title size="" style="color: white; text-align: center;">Accueil</ion-title>
   </ion-toolbar>
 </ion-header>
 
