--- a/src/app/commentaire/commentaire.page.html
+++ b/src/app/commentaire/commentaire.page.html
@@ -1,11 +1,8 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Commentaire </ion-title>
-    <ion-buttons slot="start">
-      <ion-back-button
-        defaultHref="ministere"
-        (click)="goBack()"
-      ></ion-back-button>
+  <ion-toolbar style="--background:#24A8F2;">
+    <ion-title style="color: white;" >Commentaire</ion-title>
+    <ion-buttons slot="start" style="color: white;">
+      <ion-back-button defaultHref="ministere" (click)="goBack()"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -15,22 +12,22 @@
     <ion-row>
       <ion-col>
         <ion-card class="crd">
-          <ion-card-header>
+
             <ion-card-content style="text-align: center">
               {{contenu_ide}}
             </ion-card-content>
-          </ion-card-header>
+      
         </ion-card>
       </ion-col>
     </ion-row>
 
-    <div class="" *ngFor="let ide of ide, let i=index">
+    <div class="" *ngFor="let comment of comment, let i=index">
       <div class="card mt-2">
         <div class="card-header">
           <div class="d-flex justify-content-between">
             <div>
               <ion-avatar slot="start">
-                <img src="../../assets/images/avatar.png" class="imgae" />
+                <img src={{comment.user.imageuser}} class="imgae" />
               </ion-avatar>
             </div>
             <div class="mm">
@@ -39,7 +36,7 @@
               </ion-label>
             </div>
             <div>
-              <div class="dropdown">
+              <div class="dropdown" *ngIf="comment.user.id_user == id_user">
                 <i
                   type="button"
                   data-bs-toggle="dropdown"
@@ -51,7 +48,7 @@
 
                 <ul class="dropdown-menu">
                   <li>
-                    <button class="dropdown-item" href="#">
+                    <button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="lirecomment(comment.id_commentaire)">
                       Modifier
                       <i
                         class="bi bi-pencil"
@@ -60,7 +57,7 @@
                     </button>
                   </li>
                   <li>
-                    <button class="dropdown-item" href="#">
+                    <button class="dropdown-item" href="#" (click)="supprimer(comment.id_commentaire)">
                       Supprimer <i class="bi bi-trash3" style="color: red"></i>
                     </button>
                   </li>
@@ -82,8 +79,25 @@
     <ion-buttons slot="start">
       <ion-input placeholder="Votre message" [(ngModel)]="cont"></ion-input>
       <ion-buttons slot="end">
-        <ion-button (click)="onSubmit()"> Envoyer </ion-button>
+        <ion-button (click)="onSubmit()"><i class="bi bi-send"></i></ion-button>
       </ion-buttons>
     </ion-buttons>
   </ion-toolbar>
 </ion-footer>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog mod">
+    <div class="modal-content">
+      <form #update = "ngForm" (ngSubmit)="modifierPopup(id,update.value.contenu)">
+      <div class="form-group">
+        <input  ngModel="{{comm}}" class="form-control" name="contenu" id="contenu">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class=" butna " data-bs-dismiss="modal">Annuler</button>
+        <button type="submit" class=" butn" >Actualiser</button>
+      </div>
+    </form>
+    </div>
+  </div>
+</div>
