--- a/src/app/password-update/password-update.page.html
+++ b/src/app/password-update/password-update.page.html
@@ -1,9 +1,11 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
+  <ion-toolbar  style="--background:#24A8F2;">
+    <ion-buttons slot="start" style="color: white;">
       <ion-back-button defaultHref="profil"></ion-back-button>
     </ion-buttons>
-    <ion-title>Changer de mot de passe</ion-title>
+   
+    <ion-title size="" style="color: white;" >Changer de mot de passe</ion-title>
+
   </ion-toolbar>
 </ion-header>
 
