--- a/src/app/connexion/connexion.page.html
+++ b/src/app/connexion/connexion.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title size="" style="color: black; text-align: center;">Connexion</ion-title>
+  <ion-toolbar  style="--background:#24A8F2;">
+    <ion-title size="" style="color: white; text-align: center;" >Connexion</ion-title>
   </ion-toolbar>
 </ion-header>
 
