--- a/src/app/inscription/inscription.page.html
+++ b/src/app/inscription/inscription.page.html
@@ -132,11 +132,12 @@
           </div>
         </div>
         
-        <div class="form-group form-check">
+        <div class="form-group form-check" required>
         <input
               type="checkbox"
               class="form-check-input ch"
               id="exampleCheck1"
+              required
             />
         <p class="ins">
           En continuant, vous acceptez les Conditions générales d’utilisation de
@@ -165,7 +166,7 @@
       </div>
     </div>
     </form>
-    <div class="alert alert-success" *ngIf="isSuccessful">
+    <div class="alert alert-success" >
      Votre inscription a réussi avec succès!
     </div>
     <p class="txtAuth">
