--- a/src/app/ministere/ministere.page.scss
+++ b/src/app/ministere/ministere.page.scss
@@ -24,6 +24,16 @@ ul{
  ion-buttons.buttons-last-slot.sc-ion-buttons-md-h.sc-ion-buttons-md-s.md.hydrated {
     margin-left: 26px;
 }
+.sc-ion-buttons-ios-h {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    z-index: 99;
+    margin-left: 10px;
+}
 .nav{
     position: fixed;
 }
@@ -50,16 +60,36 @@ ul{
     background-color: white;
 }
 
-// .sc-ion-label-md-s h3, .sc-ion-label-md-s h4, .sc-ion-label-md-s h5, .sc-ion-label-md-s h6 {
-//     margin-left: -49px;
-//     margin-right: 0;
-//     margin-top: -1px;
-//     margin-bottom: 2px;
-//     font-size: 19px;
-//     font-weight: 600;
-//     line-height: normal;
-// }
-
 .mm {
-    margin-left: -42%;
+    margin-left: -20%;
 }
+
+.mod{
+    margin-top: 60%;
+}
+
+.butna{
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #f22b24;
+    color: white; 
+    border-radius: 11PX;
+    height: 35px; 
+}
+
+.butn{
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #24A8F2;
+    color: white; 
+    border-radius: 11PX;
+    height: 35px; 
+}
+
+.igm{
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
